set QClipboard::Selection for select all

BUG: 428099